# strategiq

./: .env.example  CLAUDE.md  Dockerfile  MIGRATION_UV.md  README.md  TEST_COVERAGE_GAPS.md  compose.yaml  core_requirements.in  core_requirements.txt  justfile  pyproject.toml  pytest.ini
.claude/: system-prompt.md
.github/actions/setup-env/: action.yml
.github/workflows/: docker-image.yml  komodo-deploy.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docker/pygentic_ai/: build.sh  python_build.sh  python_start.sh
src/backend/core/: consts.py  core.py  exceptions.py  pdf_cache.py  pdf_service.py  tools.py
src/backend/settings/: base.py  consts.py
src/backend/site/: consts.py  router.py  utils.py
src/frontend/: package-lock.json  package.json
src/frontend/scss/: _animations.scss  _components.scss  _layout.scss  _responsive.scss  _states.scss  _typography.scss  _variables.scss  styles.scss
src/frontend/static/css/: pygentic_ai.css  pygentic_ai.css.map
src/frontend/static/js/: app.js
src/frontend/templates/: home.html  result.html  status.html  status_item.html
src/frontend/templates/components/main/: Scripts.jinja  base.html  header.html
src/frontend/templates/components/snippets/: EmptyState.jinja  ErrorState.jinja  Spinner.jinja  StatusItem.jinja  StatusTimeline.jinja
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analyze_flow.py  test_pdf_export.py
tests/unit/: __init__.py  test_pdf_service.py
